Remove submodule - re-adding in a bit

--- a/SpyglassCore/appsettings.Development.json
+++ b/SpyglassCore/appsettings.Development.json
@@ -23,7 +23,8 @@
     ]
   },
   "ConnectionStrings": {
-    "SpyglassContext": "Host=localhost;Port=5432;Database=spyglassdb;Username=spyglass;Password=spyglassdev"
+    "SpyglassContext": "Host=localhost;Port=5432;Database=spyglassdb;Username=spyglass;Password=spyglassdev",
+    "IdentityServerContext": "Host=localhost;Port=5432;Database=identityserverdb;Username=identityserver;Password=identityserverdev"
   },
   "SpyglassVersion": "2.0.0",
   "SpyglassMinimumVersion": "2.0.0",
