--- a/SpyglassCore/appsettings.json
+++ b/SpyglassCore/appsettings.json
@@ -33,7 +33,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SpyglassContext": ""
+    "SpyglassContext": "",
+    "IdentityServerContext": ""
   },
   "SpyglassVersion": "2.0.0",
   "SpyglassMinimumVersion": "2.0.0",
