--- a/Spyglass.Core/Spyglass.Core.csproj
+++ b/Spyglass.Core/Spyglass.Core.csproj
@@ -25,8 +25,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SpyglassIdentity\SpyglassIdentity.csproj" />
-      <ProjectReference Include="..\SpyglassModels\SpyglassModels.csproj" />
+      <ProjectReference Include="..\Spyglass.Models\Spyglass.Models.csproj" />
+      <ProjectReference Include="..\Spyglass.Identity\Spyglass.Identity.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
     </ItemGroup>
 
 </Project>
