Various fixes for 2.0 release

--- a/Spyglass.Core/appsettings.Development.json
+++ b/Spyglass.Core/appsettings.Development.json
@@ -26,8 +26,9 @@
     "SpyglassContext": "Host=localhost;Port=5432;Database=spyglassdb;Username=spyglass;Password=spyglassdev",
     "IdentityServerContext": "Host=localhost;Port=5432;Database=identityserverdb;Username=identityserver;Password=identityserverdev"
   },
-  "SpyglassVersion": "2.0.0",
+  "SpyglassVersion": "2.0.1",
   "SpyglassMinimumVersion": "2.0.0",
   "SpyglassDiscordInvite": "https://discord.gg/whKMsPN3nu",
-  "IntrospectionApiSecret": "introspection-secret"
+  "IntrospectionApiSecret": "introspection-secret",
+  "IntrospectionAuthority": "https://localhost:5001"
 }
