--- a/Spyglass.Core/Spyglass.Core.csproj
+++ b/Spyglass.Core/Spyglass.Core.csproj
@@ -16,6 +16,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
@@ -31,6 +32,13 @@
 
     <ItemGroup>
       <Folder Include="Migrations" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="appsettings.json" />
+      <None Include="appsettings.json" />
+      <Content Remove="appsettings.Development.json" />
+      <None Include="appsettings.Development.json" />
     </ItemGroup>
 
 </Project>
