--- a/Spyglass.Identity/Spyglass.Identity.csproj
+++ b/Spyglass.Identity/Spyglass.Identity.csproj
@@ -14,10 +14,18 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
       <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="appsettings.json" />
+      <None Include="appsettings.json" />
+      <Content Remove="appsettings.Development.json" />
+      <None Include="appsettings.Development.json" />
     </ItemGroup>
 
 </Project>
