Fix ridiculously slow stats query.

--- a/Spyglass.Core/appsettings.Development.json
+++ b/Spyglass.Core/appsettings.Development.json
@@ -1,25 +1,33 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Enrichers.ClientInfo"
     ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}[{Timestamp:HH:mm:ss} {Level:u3}] From: {ClientIp} [{ClientAgent}]{NewLine}{Exception}{NewLine}"
         }
       }
     ],
     "Enrich": [
-      "FromLogContext"
+      "FromLogContext",
+      {
+        "Name": "WithClientIp",
+        "Args": {
+          "xForwardHeaderName": "CF-Connecting-IP"
+        }
+      },
+      "WithClientAgent"
     ]
   },
   "ConnectionStrings": {
